--- a/playlist-download-service.properties
+++ b/playlist-download-service.properties
@@ -1,10 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/dept_db
-spring.datasource.username=root
-spring.datasource.password=Mysql@123
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-
-eureka.instance.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.application.name=playlist-download-service
+spring.config.import=optional:configserver:http://localhost:8888
+management.endpoints.web.exposure.include=*
 
 message=Hello, Umesh
